Workbench shading broken #112641

Closed
opened 2023-09-20 23:32:45 +02:00 by Frank Paul · 3 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: Intel(R) HD Graphics 4400 Intel 4.3.0 - Build 20.19.15.4568

Blender Version
Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-09-19 21:26, hash: 264c3e7bd7a6
Worked: (4.0.0 Alpha, USD (a108b7cb27), July 27, 00:06:43

Short description of error
Mesh shading isn't updating during transformations. Conforms only after "Applying SRL" (scale, loc., rot.) *gif attached

Exact steps for others to reproduce the error
open default startup file > turn on workbench mode > start working on a mesh

PS. 'Viewport debug' crashes blender.

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: Intel(R) HD Graphics 4400 Intel 4.3.0 - Build 20.19.15.4568 **Blender Version** Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-09-19 21:26, hash: `264c3e7bd7a6` Worked: (4.0.0 Alpha, USD (a108b7cb279c), July 27, 00:06:43 **Short description of error** Mesh shading isn't updating during transformations. Conforms only after "Applying SRL" (scale, loc., rot.) *gif attached **Exact steps for others to reproduce the error** open default startup file > turn on workbench mode > start working on a mesh PS. 'Viewport debug' crashes blender.
Frank Paul added the
Status
Needs Triage
Type
Report
Priority
Normal
labels 2023-09-20 23:32:46 +02:00
Member

Hi, thanks for the report. Could it be due to SSBO support for this platform is removed?: https://wiki.blender.org/wiki/Reference/Release_Notes/4.0/Core#Minimum_Requirement_changes

@Jeroen-Bakker , can you check?

Hi, thanks for the report. Could it be due to SSBO support for this platform is removed?: https://wiki.blender.org/wiki/Reference/Release_Notes/4.0/Core#Minimum_Requirement_changes @Jeroen-Bakker , can you check?
Member

This has to do with an issue in workbench where it the the fallback for shader draw parameters is broken. Is something we are looking into so fine to confirm this issue for now. Is also reproducable when starting blender with --debug-gpu-force-workarounds

This has to do with an issue in workbench where it the the fallback for shader draw parameters is broken. Is something we are looking into so fine to confirm this issue for now. Is also reproducable when starting blender with `--debug-gpu-force-workarounds`
Jeroen Bakker added
Status
Confirmed
and removed
Status
Needs Info from Developers
labels 2023-09-21 13:01:58 +02:00
Jeroen Bakker added this to the 4.0 milestone 2023-09-21 13:02:03 +02:00
Jeroen Bakker added this to the EEVEE & Viewport project 2023-09-21 13:02:39 +02:00
Jeroen Bakker self-assigned this 2023-09-21 14:12:14 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-09-21 19:34:18 +02:00
Author

confirming, it's working
(blender-4.0.0-alpha+main.80943094745b-windows.amd64-release)

confirming, it's working (blender-4.0.0-alpha+main.80943094745b-windows.amd64-release)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#112641
No description provided.